--- a/personal.html
+++ b/personal.html
@@ -34,19 +34,19 @@
         <table align="center" class="itabel2">
             <tr>
                 <th>C#</th>
-                <td><a href="https://en.wikipedia.org/wiki/C_Sharp_(programming_language)" target="blank"><img src="/HTML/images/Csharp.png"></a></td>
+                <td><a href="https://en.wikipedia.org/wiki/C_Sharp_(programming_language)" target="blank"><img src="/images/Csharp.png"></a></td>
             </tr>
             <tr>
                 <th>HTML</th>
-                <td><a href="https://en.wikipedia.org/wiki/HTML" target="blank"><img src="/HTML/images/HTML.png"></a></td>
+                <td><a href="https://en.wikipedia.org/wiki/HTML" target="blank"><img src="/images/HTML.png"></a></td>
             </tr>
             <tr>
                 <th>css</th>
-                <td><a href="https://en.wikipedia.org/wiki/Cascading_Style_Sheets" target="blank"><img src="/HTML/images/CSS.png"></a></td>
+                <td><a href="https://en.wikipedia.org/wiki/Cascading_Style_Sheets" target="blank"><img src="/images/CSS.png"></a></td>
             </tr>
             <tr>
                 <th>JS/Jquery</th>
-                <td><a href="https://en.wikipedia.org/wiki/JavaScript" target="blank"><img src="/HTML/images/JS.png"></a></td>
+                <td><a href="https://en.wikipedia.org/wiki/JavaScript" target="blank"><img src="/images/JS.png"></a></td>
             </tr>
         </table>
     </div>
