--- a/personal.html
+++ b/personal.html
@@ -34,7 +34,7 @@
         <table align="center" class="itabel2">
             <tr>
                 <th>C#</th>
-                <td><a href="https://en.wikipedia.org/wiki/C_Sharp_(programming_language)" target="blank"><img src="/images/Csharp.png"></a></td>
+                <td><a href="https://en.wikipedia.org/wiki/C_Sharp_(programming_language)" target="blank"><img src="/images/CSharp.png"></a></td>
             </tr>
             <tr>
                 <th>HTML</th>
