pdf download test

--- a/navigation.html
+++ b/navigation.html
@@ -14,9 +14,7 @@
             <li class="nav_dropdown">
                 <a href="personal.html">Over mij</a>
                 <ul class="nav_dropdown_tabs">
-                    <li><a href="#">Hobbies</a></li>
-                    <li><a href="#">Opleidingen</a></li>
-                    <li><a href="#">Werkervaring</a></li>
+                    <li><a href="/Files/CV.pdf">CV</a></li>
                 </ul>
             </li>
             <li>
