--- a/navigation.html
+++ b/navigation.html
@@ -7,7 +7,7 @@
                 <a href="projects.html">Projecten</a>
                 <ul class="nav_dropdown_tabs">
                     <li><a href="#">Memmory game</a></li>
-                    <li><a href="#">Project 2</a></li>
+                    <li><a href="/Paintv2">Paint</a></li>
                     <li><a href="#">Project 3</a></li>
                 </ul>
             </li>
